# PersonalFinance

./: Overview.drawio  README.md
API/: Cargo.toml
API/src/: main.rs  manual_schema.rs  schema.rs
API/src/accounts/: mod.rs
API/src/accounts/controller/: accounts_controller.rs  mod.rs
API/src/accounts/dto/: account_dto.rs
API/src/accounts/model/: account.rs  mod.rs
API/src/accounts/service/: accounts_service.rs  mod.rs
API/src/alerts/: mod.rs
API/src/alerts/controller/: alerts_controller.rs  mod.rs
API/src/alerts/dto/: alert_dto.rs
API/src/alerts/model/: alert.rs
API/src/alerts/service/: alerts_service.rs
API/src/budgets/: mod.rs
API/src/budgets/controller/: budgets_controller.rs
API/src/budgets/dto/: budgets_dto.rs
API/src/budgets/model/: budget.rs  budget_overview.rs  mod.rs
API/src/budgets/service/: budgets_service.rs  mod.rs
API/src/categories/: mod.rs
API/src/categories/controller/: categories_controller.rs  mod.rs
API/src/categories/dto/: category_dto.rs  mod.rs
API/src/categories/model/: category.rs
API/src/categories/service/: categories_service.rs
API/src/common/: mod.rs
API/src/common/model/: mod.rs  valuta_conversion_rate.rs
API/src/common/service/: mod.rs  valuta_conversion_service.rs
API/src/guard/: api_key_guard.rs
API/src/reports/: mod.rs
API/src/reports/controller/: mod.rs  reports_controller.rs
API/src/reports/dto/: kpi_dto.rs  mod.rs  report_by_category_entry_dto.rs
API/src/reports/model/: aggregated_report_by_category_entry.rs  kpi_entry.rs  mod.rs  report_by_category_entry.rs
API/src/reports/service/: mod.rs  reports_service.rs
API/src/transactions/: mod.rs
API/src/transactions/controller/: mod.rs  transactions_controller.rs
API/src/transactions/dto/: mod.rs  transaction_dto.rs
API/src/transactions/guard/: api_key_guard.rs
API/src/transactions/model/: account.rs  mod.rs  transaction.rs
API/src/transactions/service/: transaction_service.rs
Database/: Cargo.toml
ObTransform/: Cargo.toml
ObTransform/src/: main.rs  model.rs  schema.rs
OpenBanking/: Cargo.toml  README.md
OpenBanking/Tools/: logs-tail.sh
OpenBanking/migrations/2024-03-27-071436_ob_accounts/: up.sql
OpenBanking/migrations/2024-04-04-160441_ob_transactions/: up.sql
OpenBanking/src/: go_cardless_api.rs  main.rs  model.rs  schema.rs
OpenBanking/src/go_cardless/: go_cardless_api.rs  mod.rs
OpenBanking/src/go_cardless/dto/: balance_dto.rs  create_token_request_dto.rs  get_account_info_response_dto.rs  get_transactions_response_dto.rs  mod.rs  transaction_dto.rs
OpenBanking/src/go_cardless/model/: go_cardless_account_info.rs  go_cardless_requisition.rs  go_cardless_transaction.rs  mod.rs
OpenBanking/src/go_cardless/service/: mod.rs  transactions_service.rs
OpenBanking/src/model/: ob_account.rs  ob_transaction.rs
OpenBanking/src/open_banking/model/: account.rs  ob_account.rs
OpenBanking/src/open_banking/service/: accounts_service.rs
OpenBanking/src/service/: accounts_service.rs  transactions_service.rs
Services/api/: Cargo.toml  api.yml  diesel.toml  mockoon.json
Services/api/src/: aws_s3_client.rs  main.rs  manual_schema.rs
Services/api/src/accounts/: mod.rs
Services/api/src/accounts/controller/: accounts_controller.rs  mod.rs
Services/api/src/accounts/dto/: mod.rs
Services/api/src/accounts/model/: mod.rs
Services/api/src/alerts/dto/: mod.rs
Services/api/src/alerts/model/: alert.rs  mod.rs
Services/api/src/alerts/service/: alerts_service.rs  mod.rs
Services/api/src/budgets/controller/: budgets_controller.rs  mod.rs
Services/api/src/budgets/dto/: mod.rs
Services/api/src/budgets/service/: budgets_service.rs
Services/api/src/categories/controller/: categories_controller.rs
Services/api/src/categories/dto/: category_dto.rs
Services/api/src/categories/model/: category.rs  mod.rs
Services/api/src/categories/service/: mod.rs
Services/api/src/guard/: mod.rs
Services/api/src/receipts/: mod.rs
Services/api/src/receipts/controller/: mod.rs  receipts_controller.rs
Services/api/src/receipts/dto/: mod.rs  receipt_dto.rs
Services/api/src/receipts/model/: mod.rs  receipt.rs
Services/api/src/receipts/service/: mod.rs  receipts_service.rs
Services/api/src/reports/: mod.rs
Services/api/src/reports/controller/: mod.rs  reports_controller.rs
Services/api/src/reports/dto/: indicator_report_dto.rs  mod.rs  report_by_category_entry_dto.rs
Services/api/src/reports/model/: indicator.rs  report_by_category.rs
Services/obi/: Cargo.toml
Services/obi/src/: main.rs  schema.rs
Services/obi/src/go_cardless/: mod.rs
Services/obi/src/open_banking/: mod.rs
Services/obt/: Cargo.toml
Services/obt/src/: main.rs
Services/rec/: Cargo.toml  README.md
Services/rec/src/: model.rs
Spendee/: Cargo.toml
Spendee/src/: main.rs  model.rs  schema.rs  spendee.rs
(+346 files in other folders)
