[package]
name = "pfinance_api"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.5", features = ["postgres_backend", "postgres", "uuid", "chrono"] }
dotenv = "0.15.0"
rocket = "0.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0.117"
chrono = "0.4.38"
serde = "1.0.202"
