[package]
name = "pfinance_api"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.6", features = ["postgres_backend", "postgres", "uuid", "chrono", "numeric"] }
dotenv = "0.15.0"
rocket = "0.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0.117"
chrono = "0.4.38"
serde = "1.0.202"
bigdecimal = "0.4.3"
log = "0.4.21"
log4rs = "1.3.0"
