workspace = { members = [] }
[package]
name = "open_banking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.46"
diesel = { version = "2.1.5", features = ["postgres_backend", "postgres"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.2", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["v4"] }
