[package]
name = "spendee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
diesel = { version = "2.1.5", features = ["postgres_backend", "postgres", "uuid"] }
serde = { version = "1.0.198", features = ["derive"] }
log = "0.4.21"
log4rs = "1.3.0"
dotenvy = "0.15.7"
uuid = { version = "1.8.0", features = ["v4"] }
bigdecimal = "0.4.5"
