[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.6", features = ["postgres_backend", "postgres", "uuid", "chrono", "numeric"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0", features = ["json"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0.117"
chrono = "0.4.38"
serde = { version = "1.0.202", features = ["derive"] }
bigdecimal = "0.4.3"
log = "0.4.21"
log4rs = "1.3.0"
rocket_cors = "0.6.0"
aws-config = "1.5.10"
aws-sdk-s3 = "1.65.0"
tokio = { version = "1.42.0", features = ["full"] }
