workspace = { members = [] }
[package]
name = "obi"
version = "0.2.0"
edition = "2021"
description = "Open Banking Import service."

[dependencies]
curl = "0.4.46"
diesel = { version = "2.1.5", features = ["postgres_backend", "postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.2", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4.21"
log4rs = "1.3.0"
chrono = "0.4.38"
