[package]
name = "obt"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.1.5", features = ["postgres_backend", "postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
log = "0.4.21"
log4rs = "1.3.0"
serde = "1.0.199"
uuid = { version = "1.8.0", features = ["v4"] }
