[package]
name = "rec"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.6", features = ["postgres_backend", "postgres", "uuid", "chrono", "numeric"] }
serde = { version = "1.0.202", features = ["derive"] }
log = "0.4.21"
log4rs = "1.3.0"
dotenvy = "0.15.7"
uuid = { version = "1.8.0", features = ["v4"] }
bigdecimal = "0.4.5"
chrono = "0.4.38"
reqwest = { version = "0.12.5", features = ["multipart", "blocking"] }
serde_json = "1.0.117"
